--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "config-mod",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "configmod.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Lee Pepper",
   "license": "ISC",
   "dependencies": {
     "command-line-args": "^3.0.5",
+    "git-describe": "^4.0.1",
     "json-parser": "^1.1.5",
     "shelljs": "^0.7.5",
     "xml2js": "^0.4.17",
